--- a/source/catalog.html
+++ b/source/catalog.html
@@ -38,14 +38,17 @@
 
           <div class="product__inner">
             <div class="product__box">
-              <img class="product__box--img" src="img/catalog-1-mobile.png" alt="catalog">
+              <picture class="product__box--img">
+                <source class="product__box--img-mob" srcset="img/catalog-1-mobile.png" media="(max-width: 767px)">
+                <img class="product__box--img-tablet" src="img/catalog-1-tablet.png" alt="catalog">
+              </picture>
 
               <div class="product__box--inner">
                 <p class="product__box--title">Cat Energy PRO 500 г</p>
                 <ul class="product-list">
-                  <li class="product-list__item"><span>Обьем</span><span class="product-list__item-span">500 г</span></li>
-                  <li class="product-list__item"><span>Вкус</span><span class="product-list__item-span">Курица</span></li>
-                  <li class="product-list__item"><span>Цена</span><span class="product-list__item-span">700 Р.</span></li>
+                  <li class="product-list__item"><span class="product-list__item-span1">Обьем</span><span class="product-list__item-span2">500 г</span></li>
+                  <li class="product-list__item"><span class="product-list__item-span1">Вкус</span><span class="product-list__item-span2">Курица</span></li>
+                  <li class="product-list__item"><span class="product-list__item-span1">Цена</span><span class="product-list__item-span2">700 Р.</span></li>
                 </ul>
               </div>
 
@@ -54,14 +57,17 @@
           </div>
           <div class="product__inner">
             <div class="product__box">
-              <img class="product__box--img" src="img/catalog-2-mobile.png" alt="catalog">
+              <picture class="product__box--img">
+                <source class="product__box--img-mob" srcset="img/catalog-2-mobile.png" media="(max-width: 767px)">
+                <img class="product__box--img-tablet" src="img/catalog-2-tablet.png" alt="catalog">
+              </picture>
 
               <div class="product__box--inner">
                 <p class="product__box--title">Cat Energy PRO 500 г</p>
                 <ul class="product-list">
-                  <li class="product-list__item"><span>Обьем</span><span class="product-list__item-span">500 г</span></li>
-                  <li class="product-list__item"><span>Вкус</span><span class="product-list__item-span">Курица</span></li>
-                  <li class="product-list__item"><span>Цена</span><span class="product-list__item-span">700 Р.</span></li>
+                  <li class="product-list__item"><span class="product-list__item-span1">Обьем</span><span class="product-list__item-span2">500 г</span></li>
+                  <li class="product-list__item"><span class="product-list__item-span1">Вкус</span><span class="product-list__item-span2">Курица</span></li>
+                  <li class="product-list__item"><span class="product-list__item-span1">Цена</span><span class="product-list__item-span2">700 Р.</span></li>
                 </ul>
               </div>
 
@@ -70,14 +76,17 @@
           </div>
           <div class="product__inner">
             <div class="product__box">
-              <img class="product__box--img" src="img/catalog-3-mobile.png" alt="catalog">
+              <picture class="product__box--img">
+                <source class="product__box--img-mob" srcset="img/catalog-3-mobile.png" media="(max-width: 767px)">
+                <img class="product__box--img-tablet" src="img/catalog-3-tablet.png" alt="catalog">
+              </picture>
 
               <div class="product__box--inner">
                 <p class="product__box--title">Cat Energy PRO 500 г</p>
                 <ul class="product-list">
-                  <li class="product-list__item"><span>Обьем</span><span class="product-list__item-span">500 г</span></li>
-                  <li class="product-list__item"><span>Вкус</span><span class="product-list__item-span">Курица</span></li>
-                  <li class="product-list__item"><span>Цена</span><span class="product-list__item-span">700 Р.</span></li>
+                  <li class="product-list__item"><span class="product-list__item-span1">Обьем</span><span class="product-list__item-span2">500 г</span></li>
+                  <li class="product-list__item"><span class="product-list__item-span1">Вкус</span><span class="product-list__item-span2">Курица</span></li>
+                  <li class="product-list__item"><span class="product-list__item-span1">Цена</span><span class="product-list__item-span2">700 Р.</span></li>
                 </ul>
               </div>
 
@@ -86,14 +95,17 @@
           </div>
           <div class="product__inner">
             <div class="product__box">
-              <img class="product__box--img" src="img/catalog-4-mobile.png" alt="catalog">
+              <picture class="product__box--img">
+                <source class="product__box--img-mob" srcset="img/catalog-4-mobile.png" media="(max-width: 767px)">
+                <img class="product__box--img-tablet" src="img/catalog-4-tablet.png" alt="catalog">
+              </picture>
 
               <div class="product__box--inner">
                 <p class="product__box--title">Cat Energy PRO 500 г</p>
                 <ul class="product-list">
-                  <li class="product-list__item"><span>Обьем</span><span class="product-list__item-span">500 г</span></li>
-                  <li class="product-list__item"><span>Вкус</span><span class="product-list__item-span">Курица</span></li>
-                  <li class="product-list__item"><span>Цена</span><span class="product-list__item-span">700 Р.</span></li>
+                  <li class="product-list__item"><span class="product-list__item-span1">Обьем</span><span class="product-list__item-span2">500 г</span></li>
+                  <li class="product-list__item"><span class="product-list__item-span1">Вкус</span><span class="product-list__item-span2">Курица</span></li>
+                  <li class="product-list__item"><span class="product-list__item-span1">Цена</span><span class="product-list__item-span2">700 Р.</span></li>
                 </ul>
               </div>
 
@@ -102,14 +114,17 @@
           </div>
           <div class="product__inner">
             <div class="product__box">
-              <img class="product__box--img" src="img/catalog-5-mobile.png" alt="catalog">
+              <picture class="product__box--img">
+                <source class="product__box--img-mob" srcset="img/catalog-5-mobile.png" media="(max-width: 767px)">
+                <img class="product__box--img-tablet" src="img/catalog-5-tablet.png" alt="catalog">
+              </picture>
 
               <div class="product__box--inner">
                 <p class="product__box--title">Cat Energy PRO 500 г</p>
                 <ul class="product-list">
-                  <li class="product-list__item"><span>Обьем</span><span class="product-list__item-span">500 г</span></li>
-                  <li class="product-list__item"><span>Вкус</span><span class="product-list__item-span">Курица</span></li>
-                  <li class="product-list__item"><span>Цена</span><span class="product-list__item-span">700 Р.</span></li>
+                  <li class="product-list__item"><span class="product-list__item-span1">Обьем</span><span class="product-list__item-span2">500 г</span></li>
+                  <li class="product-list__item"><span class="product-list__item-span1">Вкус</span><span class="product-list__item-span2">Курица</span></li>
+                  <li class="product-list__item"><span class="product-list__item-span1">Цена</span><span class="product-list__item-span2">700 Р.</span></li>
                 </ul>
               </div>
 
@@ -118,14 +133,17 @@
           </div>
           <div class="product__inner">
             <div class="product__box">
-              <img class="product__box--img" src="img/catalog-6-mobile.png" alt="catalog">
+              <picture class="product__box--img">
+                <source class="product__box--img-mob" srcset="img/catalog-6-mobile.png" media="(max-width: 767px)">
+                <img class="product__box--img-tablet" src="img/catalog-6-tablet.png" alt="catalog">
+              </picture>
 
               <div class="product__box--inner">
                 <p class="product__box--title">Cat Energy PRO 500 г</p>
                 <ul class="product-list">
-                  <li class="product-list__item"><span>Обьем</span><span class="product-list__item-span">500 г</span></li>
-                  <li class="product-list__item"><span>Вкус</span><span class="product-list__item-span">Курица</span></li>
-                  <li class="product-list__item"><span>Цена</span><span class="product-list__item-span">700 Р.</span></li>
+                  <li class="product-list__item"><span class="product-list__item-span1">Обьем</span><span class="product-list__item-span2">500 г</span></li>
+                  <li class="product-list__item"><span class="product-list__item-span1">Вкус</span><span class="product-list__item-span2">Курица</span></li>
+                  <li class="product-list__item"><span class="product-list__item-span1">Цена</span><span class="product-list__item-span2">700 Р.</span></li>
                 </ul>
               </div>
 
@@ -134,14 +152,17 @@
           </div>
           <div class="product__inner">
             <div class="product__box">
-              <img class="product__box--img" src="img/catalog-7-mobile.png" alt="catalog">
+              <picture class="product__box--img">
+                <source class="product__box--img-mob" srcset="img/catalog-7-mobile.png" media="(max-width: 767px)">
+                <img class="product__box--img-tablet" src="img/catalog-7-tablet.png" alt="catalog">
+              </picture>
 
               <div class="product__box--inner">
                 <p class="product__box--title">Cat Energy PRO 500 г</p>
                 <ul class="product-list">
-                  <li class="product-list__item"><span>Обьем</span><span class="product-list__item-span">500 г</span></li>
-                  <li class="product-list__item"><span>Вкус</span><span class="product-list__item-span">Курица</span></li>
-                  <li class="product-list__item"><span>Цена</span><span class="product-list__item-span">700 Р.</span></li>
+                  <li class="product-list__item"><span class="product-list__item-span1">Обьем</span><span class="product-list__item-span2">500 г</span></li>
+                  <li class="product-list__item"><span class="product-list__item-span1">Вкус</span><span class="product-list__item-span2">Курица</span></li>
+                  <li class="product-list__item"><span class="product-list__item-span1">Цена</span><span class="product-list__item-span2">700 Р.</span></li>
                 </ul>
               </div>
 
