--- a/source/catalog.html
+++ b/source/catalog.html
@@ -190,38 +190,50 @@
             <p class="additional__title">Дополнительные товары</p>
 
             <div class="additional__box">
-              <p class="additional__box--title">Сахарозаменитель</p>
-              <p class="additional__box-text">
-                <span class="additional__box-text--span">1 упаковка (100 г)</span>
-                <span class="additional__box-text--span2">200 Р.</span>
-              </p>
+              <div class="additional__box-inner">
+                <p class="additional__box--title">Сахарозаменитель</p>
+                <p class="additional__box-text">
+                  <span class="additional__box-text--span">1 упаковка (100 г)</span>
+                  <span class="additional__box-text--span2">200 Р.</span>
+                </p>
+              </div>
+
               <a class="additional__box--btn" href="#">Заказать</a>
             </div>
 
             <div class="additional__box">
-              <p class="additional__box--title">Питьевая вода</p>
-              <p class="additional__box-text">
-                <span class="additional__box-text--span">5 литров</span>
-                <span class="additional__box-text--span2">50 Р.</span>
-              </p>
+              <div class="additional__box-inner">
+                <p class="additional__box--title">Питьевая вода</p>
+                <p class="additional__box-text">
+                  <span class="additional__box-text--span">5 литров</span>
+                  <span class="additional__box-text--span2">50 Р.</span>
+                </p>
+              </div>
+
               <a class="additional__box--btn" href="#">Заказать</a>
             </div>
 
             <div class="additional__box">
-              <p class="additional__box--title">Молоко</p>
-              <p class="additional__box-text">
-                <span class="additional__box-text--span">1 литр</span>
-                <span class="additional__box-text--span2">100 Р.</span>
-              </p>
+              <div class="additional__box-inner">
+                <p class="additional__box--title">Молоко</p>
+                <p class="additional__box-text">
+                  <span class="additional__box-text--span">1 литр</span>
+                  <span class="additional__box-text--span2">100 Р.</span>
+                </p>
+              </div>
+
               <a class="additional__box--btn" href="#">Заказать</a>
             </div>
 
             <div class="additional__box">
-              <p class="additional__box--title">Витамины</p>
-              <p class="additional__box-text">
-                <span class="additional__box-text--span">1 упаковка (30 г)</span>
-                <span class="additional__box-text--span2">1 упаковка (30 г).</span>
-              </p>
+              <div class="additional__box-inner">
+                <p class="additional__box--title">Витамины</p>
+                <p class="additional__box-text">
+                  <span class="additional__box-text--span">1 упаковка (30 г)</span>
+                  <span class="additional__box-text--span2">1 упаковка (30 г).</span>
+                </p>
+              </div>
+
               <a class="additional__box--btn" href="#">Заказать</a>
             </div>
 
